--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,33 @@
 .container {
-  padding: 1rem;
+  width: 100%;
+  padding: 15px 70px;
+}
+
+.bg-dark {
+  background-color: black;
+}
+.text-light {
+  color: white;
+}
+.text-right {
+  float: right;
+}
+.text-right ul {
+  width: auto;
+  text-align: right;
+}
+.garis-nav {
+  cursor: none;
+  margin-right: 5px;
+}
+.text-right li {
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 800;
+  display: inline-block;
+  padding: 15px 20px;
+}
+.text-right li:hover {
+  color: #1ed760;
 }
