--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  height: 80px;
   padding: 15px 70px;
 }
 
@@ -21,13 +22,16 @@
   margin-right: 5px;
 }
 .text-right li {
+  font-family: "Circular Std Medium", sans-serif;
   cursor: pointer;
-  font-family: sans-serif;
-  font-size: 15px;
-  font-weight: 800;
+  font-size: 16px;
   display: inline-block;
   padding: 15px 20px;
 }
 .text-right li:hover {
   color: #1ed760;
+}
+
+img {
+  cursor: pointer;
 }
