Updates on Footer

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -9,7 +9,7 @@
   background-size: 175%;
   background-position: 46% 15%;
   font-family: "Circular Std Bold", sans-serif;
-  background-color: #2940a8;
+  background-color: #2d46b9;
   color: #1ed760;
 }
 
