--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,7 @@
 footer {
   color: white;
+  min-height: 537px;
+  padding: 80px 0;
 }
 .container {
   width: 100%;
@@ -13,6 +15,8 @@ footer {
   padding-top: 80px;
 }
 .footer-image {
+  height: 42px;
+  width: 132px;
   float: left;
   clear: left;
 }
@@ -24,4 +28,105 @@ footer {
   font-size: 2rem;
   padding: 10px;
   cursor: pointer;
+}
+
+.heading-1,
+.heading-2,
+.heading-3 {
+  margin: 0 15px;
+  height: 346px;
+}
+
+.heading-4 {
+  margin: 0 15px 0 183px;
+}
+
+.text-footer-center {
+  display: flex;
+  justify-content: space-between;
+}
+
+.text-footer-center p {
+  font-size: 16px;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+.text-footer-center p:hover {
+  color: #1ed760;
+}
+
+.text-footer-center .heading {
+  cursor: default;
+  color: #919496;
+  font-size: 12px;
+}
+
+i {
+  cursor: pointer;
+  font-weight: 24px;
+  padding: 15px;
+  border-radius: 50%;
+  background-color: #222326;
+  margin-right: 5px;
+}
+
+i:hover {
+  color: #1ed760;
+}
+
+.heading-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.country {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.country img {
+  width: 24px;
+  height: 18px;
+  margin: 0 0 0 10px;
+}
+
+.country a {
+  font-family: "Circular Std Book", sans-serif;
+  color: #919496;
+  font-size: 12px;
+}
+
+.country a:hover {
+  color: #1ed760;
+}
+
+.heading-bottom a {
+  font-family: "Circular Std Book", sans-serif;
+  color: #919496;
+  font-size: 12px;
+}
+
+.heading-bottom-left {
+  margin: 0 45px 0 0;
+  flex-direction: row;
+}
+
+.heading-bottom-left a {
+  padding: 12px 0;
+  margin-right: 20px;
+}
+
+.heading-bottom-left a:hover {
+  color: #1ed760;
+}
+
+.heading-bottom-right p {
+  font-family: "Circular Std Book", sans-serif;
+  color: #919496;
+  font-size: 12px;
+}
+
+.heading-bottom-right {
+  flex-direction: column;
 }
