--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 80px;
-  padding: 15px 70px;
+  padding: 10px 70px;
 }
 
 .bg-dark {
@@ -34,4 +34,20 @@
 
 img {
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar,
+  .bg-dark {
+    position: fixed;
+  }
+  .text-right {
+    display: none;
+  }
+
+  .navbar,
+  img {
+    position: absolute;
+    left: 0;
+  }
 }
