--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   font-family: "Circular Std Book", sans-serif;
 }
+
+@media screen and (max-width: 600px) {
+  html {
+    overflow-x: hidden;
+  }
+}
